<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_dialog_default"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp56">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp56"
            android:gravity="center"
            android:text="@string/please_input_email"
            android:textColor="@color/color_text_gray_3"
            android:textSize="@dimen/sp18" />

        <ImageButton
            android:layout_width="@dimen/dp36"
            android:layout_height="@dimen/dp36"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="@dimen/dp08"
            android:background="@drawable/bg_button_close_dialog"
            android:contentDescription="@string/cancel"
            android:scaleType="centerCrop" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/px01"
        android:background="@color/color_line_black_3" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp24"
        android:layout_marginTop="@dimen/dp24"
        android:layout_marginEnd="@dimen/dp24"
        android:gravity="center"
        android:orientation="vertical">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp48"
            android:background="@drawable/bg_edit_text_1"
            android:hint="@string/user_email_example"
            android:inputType="textEmailAddress" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp24"
            android:text="@string/please_input_email_code"
            android:textColor="@color/color_text_gray_3" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp02"
            android:layout_marginTop="@dimen/dp08"
            android:layout_marginRight="@dimen/dp02"
            android:layout_marginBottom="@dimen/dp02"
            android:background="@drawable/bg_card_default"
            android:orientation="horizontal">

            <EditText
                android:layout_width="@dimen/dp0"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="5"
                android:background="@drawable/bg_edit_text_default"
                android:digits="@string/email_code_digits"
                android:gravity="center"
                android:inputType="text"
                android:maxLength="6" />

            <Button
                android:layout_width="@dimen/dp0"
                android:layout_height="@dimen/dp48"
                android:layout_gravity="center_vertical"
                android:layout_margin="@dimen/dp01"
                android:layout_weight="3"
                android:background="@drawable/bg_button_right_stroke"
                android:text="@string/get_email_code"
                android:textColor="@drawable/bg_button_text_green" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp48"
        android:layout_marginTop="@dimen/dp24"
        android:background="@drawable/bg_button_no_stroke_green"
        android:clickable="false"
        android:focusable="false"
        android:text="@string/next_step"
        android:textColor="@drawable/bg_button_text_green"
        android:textSize="@dimen/sp18" />
</LinearLayout>