<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/dp08"
    android:background="@drawable/bg_new_item_card"
    android:padding="16dp">

    <ImageView
        android:id="@+id/item_new_card_iv"
        android:layout_width="0dp"
        android:layout_height="@dimen/dp80"
        android:background="@drawable/bg_new_item_image"
        android:contentDescription="@string/item_image"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="W,1:1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RelativeLayout
        android:id="@+id/item_new_card_right_rl"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/item_new_card_iv"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/item_new_card_title_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:ellipsize="end"
            android:lines="2"
            android:text="@string/hint"
            android:textColor="@color/text_dark_gray"
            android:textSize="@dimen/sp18" />

        <TextView
            android:id="@+id/item_new_card_time_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/item_new_card_title_tv"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="@dimen/dp08"
            android:lines="1"
            android:text="@string/send_time"
            android:textColor="@color/text_light_gray" />

    </RelativeLayout>
</android.support.constraint.ConstraintLayout>