<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:orientation="vertical">
        <!-- login card -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp48"
                android:layout_marginStart="@dimen/dp24"
                android:layout_marginEnd="@dimen/dp24"
                android:background="@drawable/bg_card_default"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingStart="@dimen/dp08"
                android:paddingEnd="@dimen/dp08">

                <TextView
                    android:layout_width="@dimen/dp72"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical|end"
                    android:paddingStart="@dimen/dp08"
                    android:paddingEnd="@dimen/dp08"
                    android:text="@string/account"
                    android:textColor="@color/card_gray_75"
                    android:textSize="@dimen/sp16" />

                <EditText
                    android:id="@+id/login_user_name_et"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp32"
                    android:background="@drawable/bg_edit_text_default"
                    android:hint="@string/please_input_account"
                    android:inputType="text"
                    android:maxLength="16"
                    android:paddingStart="@dimen/dp08"
                    android:paddingEnd="@dimen/dp08"
                    android:textSize="@dimen/sp14"
                    tools:ignore="Autofill" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp48"
                android:layout_marginStart="@dimen/dp24"
                android:layout_marginTop="@dimen/dp24"
                android:layout_marginEnd="@dimen/dp24"
                android:background="@drawable/bg_card_default"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingStart="@dimen/dp08"
                android:paddingEnd="@dimen/dp08">

                <TextView
                    android:layout_width="@dimen/dp72"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical|end"
                    android:paddingStart="@dimen/dp08"
                    android:paddingEnd="@dimen/dp08"
                    android:text="@string/user_password"
                    android:textColor="@color/card_gray_75"
                    android:textSize="@dimen/sp16" />

                <EditText
                    android:id="@+id/login_user_password_et"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp32"
                    android:background="@drawable/bg_edit_text_default"
                    android:hint="@string/user_password"
                    android:inputType="textPassword"
                    android:maxLength="32"
                    android:paddingStart="@dimen/dp08"
                    android:paddingEnd="@dimen/dp08"
                    android:textSize="@dimen/sp14"
                    tools:ignore="Autofill" />

            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/login_btn"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp48"
            android:layout_marginStart="@dimen/dp24"
            android:layout_marginTop="@dimen/dp48"
            android:layout_marginEnd="@dimen/dp24"
            android:background="@drawable/bg_button_default"
            android:text="@string/login_immediately"
            android:textColor="@drawable/bg_button_text_default"
            android:textSize="@dimen/sp18" />


        <TextView
            android:id="@+id/login_to_register_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginStart="@dimen/dp24"
            android:layout_marginTop="@dimen/dp24"
            android:layout_marginEnd="@dimen/dp24"
            android:drawableEnd="@drawable/ic_chevron_right_black_24dp"
            android:gravity="center"
            android:text="@string/no_account"
            android:textColor="@color/card_gray_default"
            android:textSize="@dimen/sp14" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/login_other_account_ll"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp56"
        android:layout_alignParentBottom="true"
        android:background="@drawable/bg_card_white"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/px01"
            android:background="@color/card_gray_default" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/use_third_to_login"
            android:textColor="@drawable/bg_card_white_to_black_text" />

    </LinearLayout>
</RelativeLayout>